--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.0+3
   intl: ^0.17.0
+  cloud_firestore: ^4.0.5
+  firebase_core: ^2.2.0
   shared_preferences: ^2.0.15
 
 dev_dependencies:
