--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cloud_firestore: ^4.0.5
   firebase_core: ^2.2.0
   shared_preferences: ^2.0.15
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
